crates/lutum/tests/ui/hook_impl_imported_slot_without_companion_items.stderr
error[E0405]: cannot find trait `ValidateOutputHook` in this scope
  --> tests/ui/hook_impl_imported_slot_without_companion_items.rs:10:15
   |
10 | #[lutum::hook(ValidateOutput)]
   |               ^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
 8 + use crate::slots::ValidateOutputHook;
   |

error[E0425]: cannot find type `ValidateOutputArgs` in this scope
  --> tests/ui/hook_impl_imported_slot_without_companion_items.rs:10:15
   |
 2 |     #[lutum::def_hook(always, chain = lutum::short_circuit)]
   |     -------------------------------------------------------- similarly named struct `ValidateOutput` defined here
...
10 | #[lutum::hook(ValidateOutput)]
   |               ^^^^^^^^^^^^^^
   |
help: consider importing this struct
   |
 8 + use crate::slots::ValidateOutputArgs;
   |

warning: unused import: `slots::ValidateOutput`
 --> tests/ui/hook_impl_imported_slot_without_companion_items.rs:8:5
  |
8 | use slots::ValidateOutput;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
